# DockAI

./: .gitignore  README.md  account_key_pair.json  lib.rs  main.py  package-lock.json  package.json
backend/: .env.example  database.py  main.py  models.py  requirements.txt
backend/ipfs/: pinata_post.py
backend/smart_contract/: Cargo.toml
backend/smart_contract/src/: lib.rs  main.rs
backend/utils/: cid_store.py  cid_store2.py  llm_integration.py  parser.py  pdf_generator.py  read_to_dataframe.py  visualization.py
frontend/: app.py  requirements.txt
frontend/src/app/: page.tsx
frontend/src/components/: MoleculeViewer.tsx  UploadAnimation.tsx
frontend/src/lib/: dbConnect.ts
frontend/src/schemas/: PdbFileSchema.ts
frontend2/: package-lock.json  package.json  tailwind.config.ts
frontend2/app/: globals.css  page.tsx
frontend2/app/api/test/: route.ts
frontend2/components/: MoleculeViewer.tsx  demo-visualizer.tsx  feature-card.tsx  molecule-animation.tsx
frontend2/src/app/: layout.tsx
frontend2/src/app/upload/: page.tsx
frontend2/src/app/visualize/: page.tsx
frontend2/src/components/: FileUploader.tsx  MoleculeViewer.tsx
frontend2/src/model/: PdbFile.ts
