[package]
name = "cid_storage"
version = "0.1.0"
description = "CID storage program for Solana"
edition = "2021"

[dependencies]
solana-program = "2.1.16" # Compatible with the latest stable Solana SBF toolchain
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
overflow-checks = false
lto = "fat"
opt-level = "s"

[lib]
crate-type = ["cdylib"]


